VSE Scene Strips with "Use Sequence" enabled break when blended with other scene strips #47814

Closed
opened 2016-03-16 06:42:47 +01:00 by Sam Brubaker · 8 comments

Version: 2.77 rc2 (linux 64bit)

How to reproduce:
Sequencer Bug.blend

  • Open the attached file
  • Render a frame in the "Main Sequence"
  • Disable the "Globe Scene" strip and render again
  • Note how the lower scene strip causes the one above it to disappear somehow

Not expected behaviour at all. "Use Sequence" is a very useful new feature, but the strips need to be able to blend with everything else in the Video Sequencer.

Version: 2.77 rc2 (linux 64bit) How to reproduce: [Sequencer Bug.blend](https://archive.blender.org/developer/F293486/Sequencer_Bug.blend) - Open the attached file - Render a frame in the "Main Sequence" - Disable the "Globe Scene" strip and render again - Note how the lower scene strip causes the one above it to disappear somehow Not expected behaviour at all. "Use Sequence" is a very useful new feature, but the strips need to be able to blend with everything else in the Video Sequencer.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @rocketman

Added subscriber: @rocketman

Added subscriber: @Sergey

Added subscriber: @Sergey

This is related on USE_SCENE_RECURSIVE_HACK. If the scene is used twice in the stack it'll give wrong results. Commenting the hack makes the file to behave as expected.

This is related on `USE_SCENE_RECURSIVE_HACK`. If the scene is used twice in the stack it'll give wrong results. Commenting the hack makes the file to behave as expected.
Campbell Barton was assigned by Sergey Sharybin 2016-03-22 14:34:06 +01:00

This errors is caused by depsgraph using the same flag, which is called from within the sequencer render.

https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/depsgraph.c;24d931ea585ce01bb76078c48765222dcfddd431$2371

This errors is caused by depsgraph using the same flag, which is called from within the sequencer render. https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/depsgraph.c;24d931ea585ce01bb76078c48765222dcfddd431$2371

Suggested fix for 2.77a. P344

Suggested fix for 2.77a. [P344](https://archive.blender.org/developer/P344.txt)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 37e1e2695c

This issue was referenced by 37e1e2695cc3e491aea9e4364ef2becdec416647
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47814
No description provided.