Fix T47814: VSE Scene 'Use Sequence' fails

Conflict with flags between depsgraph and sequencer caused error.
Now pass state of sequencer parents to avoid recursion.